# Tetrahedron-Memory-Hive-System

./: .env.example  .gitignore  .zenodo.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  EXECUTION_CHECKLIST.md  HONEYCOMB_NEURAL_FIELD.md  INTEGRATION_GUIDE.md  LICENSE  PHASE1_LLM_INTEGRATION.md  QUICKSTART.md  README.cn.md  README.md  REPORT.md  REPORT_CN.md  SETUP_AND_GUIDELINES.md  V3.0_ROADMAP.md  VISUALIZATION_DESIGN.md  architecture.md  cluster.yaml  code_bridge.py  deploy.sh  docker-compose.yml  entrypoint.sh  install.sh  mcp-tetramem-safe.sh  micro_bench.py  openclaw-integrate.sh  preload_and_run.py  profiler.py  pyproject.toml  read_stats.py  recover_import.py  requirements.txt  run_preinit.bat  run_server.bat  (+14 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  math_question.yml
.github/workflows/: ci.yml
deploy/: tetramem-api.service  tetramem-watchdog.service
docs/: DARK_PLANE_V8_DESIGN.md  TETRAMEM_XL_V8_PAPER.md  paper.md
examples/: basic_usage.py  distributed.py
libs/: OrbitControls.js
mcp-tetramem/: index.js  package-lock.json
static/: dashboard.html  index.html
tests/: test_abstract_reorg.py  test_api_v2_integration.py  test_cli_hooks.py  test_core.py  test_distributed.py  test_dream_enhanced.py  test_gap_critical.py  test_honeycomb_pcnn.py  test_integration.py  test_integration_core.py  test_llm_dream.py  test_p0_p4_topology.py  test_phase2_phase3.py  test_phase34_extensions.py  test_phase4_production.py  test_production_final.py  test_q123.py  test_runtime_observer.py  test_stress_1m.py  test_stress_72h.py  test_tetra_mesh_modules.py
tetrahedron_memory/: __init__.py  agent_driver.py  agent_loop.py  app_state.py  audit_log.py  auth.py  cli.py  consistency.py  core.py  crystallized_pathway.py  dark_plane_engine.py  dark_plane_substrate.py  distributed_mesh.py  dream_engine.py  enterprise.py  eternity_audit.py  feedback.py  geometry.py  global_coarse_mesh.py  hebbian_memory.py  honeycomb_neural_field.py  honeycomb_node.py  hooks.py  input_validation.py  insight_aggregator.py  lattice_integrity.py  llm_integration.py  llm_tool.py  monitoring.py  multimodal.py  observability.py  observer_config.py  partitioning.py  partitioning.py.bak_q3  pcnn_types.py  persistence.py  persistence_engine.py  persistent_entropy.py  phase_transition.py  phase_transition_honeycomb.py  (+22 more)
tetrahedron_memory/routers/: agent.py  darkplane.py  memory.py  neural.py  observer.py  spatial.py  system.py
ui/: dashboard.html  index.html
