[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetrahedron-memory"
version = "4.1.0"
description = "BCC Lattice Honeycomb Neural Field with PCNN — Topology-aware Eternal Memory System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC BY-NC 4.0"}
authors = [
    {name = "Liu Qihang", email = "sunormesky@gmail.com"}
]
keywords = ["memory", "ai", "pcnn", "bcc-lattice", "honeycomb", "neural-network", "hebbian", "topology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
]
all = [
    "tetrahedron-memory[dev,api]",
]

[tool.setuptools]
packages = ["tetrahedron_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E741", "F401", "F841", "W605"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
"tests/*" = ["F401", "F811"]
