[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetrahedron-memory"
version = "6.5.0"
description = "TetraMem-XL: BCC Honeycomb Lattice + PCNN Neural Pulse Eternal Memory System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "CC BY-NC 4.0"}
authors = [
    {name = "Liu Qihang", email = "sunormesky@gmail.com"}
]
keywords = ["memory", "ai", "tetrahedron", "geometry", "topology", "gudhi", "persistent-homology"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "gudhi>=3.7.0",
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=1.10.0",
    "prometheus-client>=0.16.0",
    "starlette>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
visualization = [
    "pyvista>=0.38.0",
    "pyvistaqt>=0.11.0",
    "matplotlib>=3.5.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
distributed = [
    "ray>=2.0.0",
]
persistence = [
    "pandas>=1.5.0",
    "pyarrow>=10.0.0",
]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "prometheus-client>=0.16.0",
]
cloud = [
    "boto3>=1.26.0",
]
all = [
    "tetrahedron-memory[dev,test,visualization,distributed,persistence,api,cloud]",
]

[project.scripts]
tetramem = "tetrahedron_memory.cli:main"

[project.entry-points]
tetrahedron.memory = "tetrahedron_memory:GeoMemoryBody"

[tool.setuptools]
packages = ["tetrahedron_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: performance benchmark tests",
]

[tool.black]
line-length = 100

[tool.