[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetrahedron-memory"
version = "7.1.0"
description = "TetraMem-XL: BCC Honeycomb Lattice + PCNN Neural Pulse Eternal Memory System"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "CC BY-NC 4.0"}
authors = [
    {name = "TetraMem Contributors"}
]
keywords = ["memory", "ai", "tetrahedron", "geometry", "topology", "pcnn", "honeycomb"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=1.10.0",
    "prometheus-client>=0.16.0",
    "starlette>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]
visualization = [
    "pyvista>=0.38.0",
    "matplotlib>=3.5.0",
]
all = [
    "tetrahedron-memory[dev,visualization]",
]

[tool.setuptools]
packages = ["tetrahedron_memory"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow",
    "benchmark: performance benchmark tests",
]

[tool.ruff]
line-length = 100
target-version = "py39"
